deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-validation
  namespace: default
  labels:
    app: jwt-validation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwt-validation
  template:
    metadata:
      labels:
        app: jwt-validation
    spec:
      containers:
        - name: jwt-validation
          image: djambersi/jwt-validation:0.0.1
          imagePullPolicy: Never
          resources:
            limits:
              memory: "512M"
          ports:
            - name: web
              containerPort: 8080
